added gallery images and js slider file

--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
 	</head>
 
 	<body>
-		<div id="header">
-				<!-- Header content goes here: logo, main navigation, header container-->
-		</div>
+		<main>
+			<section id="gallery">
+				<h1>Image Gallery</h1>
 
-		<div id="content">
-
-		</div>
-
-		<div id="footer">
-
-		</div>
+				<img src="http://placehold.it/310x180/012345/ffffff" alt="">
+				<img src="http://placehold.it/310x180/123456/ffffff" alt="">
+				<img src="http://placehold.it/310x180/234567/ffffff" alt="">
+				<img src="http://placehold.it/310x180/345678/ffffff" alt="">
+				<img src="http://placehold.it/310x180/456789/ffffff" alt="">
+				<img src="http://placehold.it/310x180/56789a/ffffff" alt="">
+				<img src="http://placehold.it/310x180/6789ab/ffffff" alt="">
+				<img src="http://placehold.it/310x180/789abc/ffffff" alt="">
+				<img src="http://placehold.it/310x180/89acbd/ffffff" alt="">
+				
+			</section>
+		</main>
+		<script src="js/slider.js"></script>
 	</body>
 </html>
