--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Home | Site Name</title>
+		<title>Gallery | JS Image Slider</title>
 		<meta name="description" content="Between 150 and 160 characters">
 		<link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+
 	</head>
 
 	<body>
@@ -21,7 +23,7 @@
 				<img src="http://placehold.it/310x180/6789ab/ffffff" alt="">
 				<img src="http://placehold.it/310x180/789abc/ffffff" alt="">
 				<img src="http://placehold.it/310x180/89acbd/ffffff" alt="">
-				
+
 			</section>
 		</main>
 		<script src="js/slider.js"></script>
